# exploring-ml

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Data_Preprocessing/: data_presprocessing.py
MyMall/: category.ipynb  category.py  get_category.py  product_info.html  product_info.py  scrape_products.ipynb
my_mall/: mymall_category.html
my_mall/file/: products.csv
