[tool.poetry]
name = "LearnML"
version = "1.0.0"
description = ""
authors = ["MD Nurujjaman Nur <nur.ruet12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
jupyterlab = "^3.4.5"
dash = "^2.6.1"
jupyter-dash = "^0.4.2"
beautifulsoup4 = "^4.11.1"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.40"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
