[tool.poetry]
name = "ExploringML"
version = "1.0.0"
description = ""
authors = ["MD Nurujjaman Nur <nur.ruet12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.4.3"
jupyterlab = "^4.2.5"
dash = "^2.15.0"
jupyter-dash = "^0.4.2"
beautifulsoup4 = "^4.11.1"
psycopg2-binary = "^2.9.10"
SQLAlchemy = "^1.4.40"

[tool.poetry.group.dev.dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
